# rec-def-pearl

./: .gitignore  .latexmkrc  README.md  anonymize.sh  bib.bib  doi2bib.py  doibib.yaml  icfp23-authors-response.txt  icfp23-reviews2.txt  icfp23-revision-covernote.md  rec-def-pearl.tex  shell.nix  spellcheck.en_US
aec/: AEC-Submission-Blurbs.md  README.md  aec-image-build.sh  aec-image-prepare.sh
aec/aec-code/: Hatafun.hs  minesweeper.hs  program-anal-hatafun.hs  program-anal.hs  trans.hs
aec/aec-code/program-anal-datafix/: Example.hs  cabal.project
code/: CanThrow1.hs  DFCanThrow.lhs  Exp.hs  HCanThrow.lhs  HTrans.lhs  Hatafun.hs  System
code/datafix/: datafix.nix
denotational/: .latexmkrc  rec-def-denotational.tex
pearl/: .gitignore  Cell.lhs  bib.bib  dominators.hs  icfp23-reviews1.txt  icfp23-revision-covernote.md  polytt.fmt  rec-def-pearl.tex  shell.nix  spellcheck.en_US  spellcheck.sh
pearl/aec/: .gitignore  README.md  aec-image-build.sh  aec-image-prepare.sh  bash_history  ghci_history
pearl/aec/aec-code/program-anal-datafix/: cabal.project  program-anal-datafix.cabal
pearl/code/: CanThrow2.hs  CanThrow3.lhs  Cell.lhs  Data  Exp.hs  HTrans.hs  Hatafun.hs  HatafunVsRecDef.hs  Trans.hs
pearl/code/Hatafun/: .gitignore  Hatafun.hs  README.md
pearl/code/datafix/: default.nix  stack-lts-9.yaml
talk/: .gitignore  Graph.hs  RGraph.hs  rec-def-icfp23-2023-09-05.tex  shell.nix
