cabal-version:       2.0
name:                program-analysis-datafix
version:             0.0.0.1
author:              Sebastian Graf
maintainer:          sgraf1337@gmail.com
build-type:          Simple


library program-analysis-datafox
  build-depends: base, containers,  datafix
  exposed-modules: Example
  default-language:  Haskell2010
